# phase2

./: GDPO.py  LICENSE  README.md  chat_viewer.py  config.yaml  dataset.py  environment.py  heteroscedastic_utils.py  inference.py  inspect_model.py  loss.py  mHC.py  model.py  model_loader.py  pyproject.toml  rlhf_collect.py  start_venv.bat  tokenizer.py  training.py  training_logger.py  utils.py  visualization.py
architectures/: __init__.py  ministral_3_3b_instruct.py  ministral_3_3b_instruct_heteroscedastic_uncertainty.py  ministral_3_3b_instruct_mHC.py
data/: RLHF_preference_data_sample_20260131_001022.json  RLHF_preference_data_sample_20260131_041140.json  sample.json  train_biological_causality_1000.csv  train_biological_causality_1000.json  train_biological_causality_1000_no_pharma.csv  train_biological_causality_1000_no_pharma.json
data_formatting/: agent_train_data.json  format_agent_data.py  format_data.py  tool_retrieval_sys_prompt.txt  train_biological_casuality_1000_results_gpt_4o_formatted.json  train_biological_causality_1000_no_pharma.json
data_loaders/: agent_dataset.py  gdpo_agent_dataset.py
inference_ui/: ADDING_NODES.md  README.md  app.js  graph.html  index.html  node-graph.css  node-graph.js  style.css
mock_up/: app.js  i18n.js  index.html  mock-api.js  node-graph.js  style.css
preference_ui/: app.js  index.html  style.css
prompts/: CODE_GEN_PROMPT.txt  PLAN_SYSTEM_PROMPT.txt  REASONING_JUDGE_PROMPT.txt
result/: ministral_3_3b_instruct-24-3.8B-1ep-epoch-20260128-033718.csv  ministral_3_3b_instruct-24-3.8B-1ep-epoch-20260128-124758.csv  (+2 more)
(+131 files in other folders)
